# poke-http

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: sample.http
src/: client.rs  error.rs  lib.rs  main.rs  variable.rs
src/http/: mod.rs  parser.rs  request.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
