[package]
name = "poke-http"
version = "0.1.0"
edition = "2024"
description = "Interactive terminal client for .http files"
license = "MIT"
repository = "https://github.com/mmodzelewski/poke-http"
keywords = ["http", "rest", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "poke"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
